--- a/src/index.html
+++ b/src/index.html
@@ -13,17 +13,13 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">OMG You will not believe me but...</h1>
-      <!--<img src="./rigo-baby.jpg" />-->
+    <div
+      class="d-flex flex-column justify-content-center text-center"
+      style="height: 100vh;"
+    >
+      <h1>OMG You will not believe me but...</h1>
       <p id="excuse"></p>
 
-      <!--
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      -->
       <div class="fixed-bottom p-4">
         Made with ❤️ by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
